updated styling to projects page to prevent img stretch

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -21,10 +21,9 @@
     overflow: hidden;
     @include tablet {
       width: 35%;
-      max-width: 350px;
     }
     @include desktop {
-      max-width: 550px;
+      max-width: 375px;
     }
   }
   &__content-overlay {
@@ -44,12 +43,8 @@
   &__content-image {
     width: 100%;
     height: 300px;
-    // object-fit: cover;
     border: 5px solid white;
     border-radius: 5px;
-    @include desktop {
-      height: 600px;
-    }
   }
   &__content-details {
     position: absolute;
@@ -72,9 +67,7 @@
     }
   }
   &__content-title {
-    // color: #1a1a1a;
     text-align: center;
-    // margin-bottom: 10px;
     margin-top: 2px;
     margin-bottom: 0;
     font-family: "BreeSerif";
@@ -107,6 +100,9 @@
     margin-top: 5%;
     display: flex;
     justify-content: center;
+    @include desktop {
+      justify-content: space-evenly;
+    }
   }
   &__content-link {
     width: 30%;
